# CMake-RealSense-from-sources

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
